# ifsbench

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  ifsbench-post-import.cmake.in  populate
.github/workflows/: pytest.yaml
cmake/: CMakeLists.txt  ifsbench_find_executables.cmake  ifsbench_get_python_wheels.cmake  ifsbench_python_macros.cmake
docs/source/: ifsbench_arch.rst  ifsbench_benchmark.rst  ifsbench_command_line.rst  ifsbench_data.rst  ifsbench_launch.rst  ifsbench_overview.rst  ifsbench_results.rst  ifsbench_validation.rst  index.md
docs/source/tutorials/: arch.md  benchmarks.md  data_pipelines.md  launchers.md  results.md  validation.md  yaml_files.md
ifsbench/: __init__.py  application.py  envhandler.py  gribfile.py  job.py  yaml.py
ifsbench/command_line/: __init__.py
ifsbench/data/: fetchhandler.py  namelisthandler.py
ifsbench/data/tests/: test_extracthandler.py  test_fetchhandler.py  test_namelisthandler.py  test_renamehandler.py
ifsbench/launch/: __init__.py  arch.py  commandoverride.py  commandwraplauncher.py  commandwrapoverride.py  composelauncher.py  job.py  launcher.py
ifsbench/launch/tests/: test_commandwraplauncher.py  test_commandwrapoverride.py  test_composelauncher.py  test_launcher.py
ifsbench/tests/: test_cmake.py  test_yaml.py
ifsbench/validation/: frame_close_validation.py
